--- a/project/src/css/styles.css
+++ b/project/src/css/styles.css
@@ -4,23 +4,17 @@
 }
 
 body {
-    overflow: auto;  
+    overflow: auto; 
+    min-height: 100vh;
 }
 
-
-.sidebar {
-    height: 100%;
-    overflow-y: auto;      
-    border-right: 1px solid #dee2e6;
-}
 .content {
     padding: 20px;
-    overflow-y: auto;      
-    height: 100%;      
+    overflow-y: auto;         
 }
 
-table .edit-btn {
-    color: #007bff;
+table .details-btn {
+    color: #212529;
     font-size: 1.2rem;
     &:hover {
         cursor: pointer;
@@ -35,9 +29,6 @@ table .delete-btn {
     }
 }
 
-main {
-    min-height: 100vh;
-}
 
 section .inicio-head {
     display: flex;
@@ -59,6 +50,4 @@ section .inicio {
     padding: 20px;
     margin-top: 20px;   
 }
-
-
 
